# saccer-centromere-analysis

./: .gitignore  LICENSE  README.md  config.cluster.yaml  config.yaml  pyproject.toml  requirements.txt
data/: sacer_centromere.fasta
docs/superpowers/plans/: 2026-05-16-refactor-implementation.md
docs/superpowers/specs/: 2026-05-16-refactor-design.md
notebooks/: exploration.ipynb
scripts/: 01_preprocess.py  02_filter.py  03_align.py  04_analyze.py  05_visualize.py  blast.sh  run_blast_cluster.sh  run_pipeline.py
src/centromere/: align.py  filter.py  io.py  mutations.py  preprocess.py  viz.py
tests/: test_align.py  test_filter.py  test_io.py  test_mutations.py  test_preprocess.py  test_viz.py
