[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "centromere"
version = "0.1.0"
description = "S. cerevisiae centromere variability analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "biopython>=1.81",
    "seaborn>=0.12",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "kaleido>=0.2",
    "logomaker>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
